--- a/RaceGame.csproj
+++ b/RaceGame.csproj
@@ -47,6 +47,8 @@
   <ItemGroup>
     <Compile Include="Base.cs" />
     <Compile Include="DelegatesAndEnums.cs" />
+    <Compile Include="Game.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Window.cs">
       <SubType>Form</SubType>
     </Compile>
