--- a/RaceGame.csproj
+++ b/RaceGame.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Cars.cs" />
     <Compile Include="DelegatesAndEnums.cs" />
     <Compile Include="Game.cs" />
+    <Compile Include="Pathfinding\AStar.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="Vehicle.cs" />
